--- a/microservicecloud-eureke01.yml
+++ b/microservicecloud-eureke01.yml
@@ -7,13 +7,12 @@ spring:
   profiles: dev
 server:
   port: 7001
+
 eureka:
   instance:
-    hostname: localhost #eureka服务端的实例名称
+    hostname: 192.168.137.2 #eureka服务端的实例名称
   client:
     register-with-eureka: false #false表示不向注册中心注册自己。
     fetch-registry: false #false表示自己端就是注册中心，我的职责就是维护服务实例，并不需要去检索服务
     service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/        #设置与Eureka Server交互的地址查询服务和注册服务都需要依赖这个地址。
-  server:
-    enable-self-preservation: false #禁用自我保护 不建议禁止
+      defaultZone: http://192.168.137.3:7001/eureka/,http://192.168.137.4:7001/eureka/     #设置与Eureka Server交互的地址查询服务和注册服务都需要依赖这个地址。
